--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build": "webpack --mode production",
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint ./src/**/*.js --quiet",
-        "deploy": "gh-pages -d dist"
+        "deploy": "git subtree push --prefix dist origin gh-pages"
     },
     "devDependencies": {
         "autoprefixer": "^9.1.5",
